fix: make app bar buttons not overlay on iOS

--- a/packages/ui-webc/src/components/app-bar/app-bar.css
+++ b/packages/ui-webc/src/components/app-bar/app-bar.css
@@ -8,11 +8,11 @@
   height: 100% !important;
 }
 
-.prefix.has-content {
-  margin-left: calc(var(--spacing-3) * -1);
+.container.has-prefix {
+  padding-left: var(--spacing-1);
 }
-.suffix.has-content {
-  margin-right: calc(var(--spacing-3) * -1);
+.container.has-suffix {
+  padding-right: var(--spacing-1);
 }
 
 .container {
